tests/failing/missing_columns_struct.rs

#[entity]
struct MissingColumnsStruct {
    #[pk]
    id: ParentPK,
}
